--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,12 @@
     padding: 0;
     border: 0;
     margin: auto;
-    
 }
 body{
     display: flex;
-    flex-direction: column;
+    flex-flow: column wrap;
     align-items: center;
+    justify-content: center;
     font-family: "Gill Sans";
     font-weight: bold;
     color: #502314;
@@ -26,6 +26,8 @@ header{
 
 /* Main */
 .conteudo{
+    display: flex;
+    flex-flow: row wrap;
     width: 50%;
     height: auto;
     padding: 20px 50px 50px 50px;
@@ -102,7 +104,12 @@ input[type='radio'] {
     opacity: 0.8;
 }
 /* Botão de enviar */
-input[type='submit']{
+.container-btn{
+    text-align: center;
+    padding-top: 50px;
+    position: relative;
+}
+.btn{
     width: 30%;
     height: 50px;
     color: #F5EBDC;
@@ -113,17 +120,30 @@ input[type='submit']{
     font-size: 18px;
     font-weight: 600;
     display: inline-block;
-    transition: 0.5s;
+    position: relative;
+    transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
 }
-.btn{
-    text-align: center;
-    padding-top: 50px;
-}
-input[type='submit']:hover{
+.btn:hover{
     background: #FF8233;
     color: #D62300;
+    transform: scale(1.05);
+    z-index: 4;
 }
-
+.seta-animada{
+    animation: seta 0.5s infinite alternate;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 75%;
+    bottom: 25%;
+    right: 50%;
+    left: 0px; 
+}
+@keyframes seta{
+    from{
+        transform: translateX(15px);
+    }
+}
 /* Footer */
 footer{
     margin-top: 15px;
